gowthamarajan-k8s-training/kubernetes/externaldb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: empms-db
  namespace: my-namespace
spec:
  type: ExternalName
  externalName: my-mysql-db-1.cwyixqvemlrz.ap-south-1.rds.amazonaws.com
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
